--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html dir="rtl" lang="ar">
 
 <head>
+    <meta name="facebook-domain-verification" content="5bhtbvmwux80ywbya0vlm32260n09r" />
     <meta charset="UTF-8">
     <title>HERBO-DIABET &#8211; إليك من الطبيعة!</title>
     <link rel="stylesheet" href="assets/style.css" data-minify="1" />
